Fri Feb 10 14:54:26 1995  Theodore Y. Ts'o  <tytso@dcl>

	* asn1.h: Removed ISODE cruft -- moved included .h files into
		asn1.h, to simplify the krb5 header file structure.

	* Makefile.in (ET_HEADERS): Remove isode cruft.

Mon Feb 06 17:19:04 1995 Chris Provenzano  (proven@mit.edu)

	* func-proto.h (krb5_get_in_tkt()) Changed key_proc args to be the
		following (krb5_context, const krb5_keytype, krb5_data *,
                krb5_const_pointer, krb5_keyblock **)

	* func-proto.h (krb5_get_in_tkt_*()) Removed krb5_keytype, changed
		krb5_enctype to krb5_enctype *, changed krb5_preauthtype to
		krb5_preauthtype *.

	* func-proto.h Added new routine krb5_get_in_tkt_with_keytab().

Fri Feb  3 07:57:31 1995  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in: Use politically correct name of AC_CHECK_SIZEOF
		instead of AC_SIZEOF_TYPE.

        * configure.in:
        * wordsize.h: Don't use BITS16, BITS32, etc. anymore.  Use
                autoconf's SIZEOF_INT and SIZEOF_LONG definitions to make
                things work.

Mon Jan 30 15:43:19 1995  Chris Provenzano  (proven@mit.edu)

	* func-proto.h Added krb5_keytype arg to rb5_rdreq_key_proc.

	* func-proto.h (krb5_send_tgs()) Changed krb5_enctype arg to
		krb5_enctype *, a NULL terminated array of encryption types.

	* func-proto.h Added prototypes for krb5_get_for_creds(),
		krb5_set_default_in_tkt_etypes(), and
		krb5_get_default_in_tkt_etypes().
	
	* krb5.h Added fields to krb5_context to support default etypes.

Fri Jan 27 00:56:12 1995  Chris Provenzano  (proven@mit.edu)

	* func-proto.h (krb5_kt_read_service_key()) Added krb5_keytype arg.
	* keytab.h (krb5_kt_get_entry()) Add krb5_keytype arg.

Fri Jan 27 00:56:12 1995  Chris Provenzano  (proven@mit.edu)

	* base-defs.h Typedef krb5_boolean, krb5_msgtype, krb5_kvno,
                krb5_addrtype, krb5_keytyp, krb5_enctype, krb5_cksumtype,
                and krb5_authdatatype as unsigned int.