@@ -42,6 +42,8 @@ dnl
 dnl
 AC_HEADER_CHECK(string.h,AC_DEFINE(USE_STRING_H))
 AC_HEADER_CHECK(stdlib.h,AC_DEFINE(HAS_STDLIB_H),AC_DEFINE(NO_STDLIB_H))
+AC_HEADER_CHECK(sys/file.h,AC_DEFINE(HAS_SYS_FILE_H))
+AC_HEADER_CHECK(sys/param.h,AC_DEFINE(HAS_SYS_PARAM_H))
 CHECK_STDARG
 
 AC_FUNC_CHECK([setvbuf],AC_DEFINE(HAS_SETVBUF))
